# orchestrator/docs/swagger.yaml
@@ -74,6 +74,8 @@ paths:
     post:
       consumes:
       - application/json
+      description: Добавить математическое выражение из чисел, знаков [+, -, *, /,
+        (, )] в очередь на выполнение. Возвращает ULID ID при успешном запросе
       parameters:
       - description: Объект, содержащий в себе выражение
         in: body
@@ -92,6 +94,14 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/dto.CalculateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ApiError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ApiError'
         "422":
           description: Unprocessable Entity
           schema:
@@ -108,6 +118,9 @@ paths:
     get:
       consumes:
       - application/json
+      description: Выражение состоит из ID (ULID), Result (0 или другое число) и Status
+        (DONE - Успешно выполнено, FAILED - Ошибка при выполнении, PROCESSING - Выполняется).
+        Возвращает список выражений при успешном запросе
       produces:
       - application/json
       responses:
@@ -115,6 +128,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.ListAllExpressionsResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ApiError'
         "500":
           description: Internal Server Error
           schema:
@@ -127,6 +144,9 @@ paths:
     get:
       consumes:
       - application/json
+      description: Выражение состоит из ID (ULID), Result (0 или другое число) и Status
+        (DONE - Успешно выполнено, FAILED - Ошибка при выполнении, PROCESSING - Выполняется).
+        Возвращает выражение при успешном запросе
       parameters:
       - description: 01JTE60CDWQ5R3QSWZBP8J6FG3
         in: path
@@ -140,12 +160,16 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.GetByIdExpressionResponse'
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
           schema:
             $ref: '#/definitions/dto.ApiError'
-        "422":
-          description: Unprocessable Entity
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ApiError'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/dto.ApiError'
       security:
@@ -184,6 +208,10 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/dto.ApiError'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/dto.ApiError'
         "500":
           description: Internal Server Error
           schema:
@@ -211,8 +239,16 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/dto.AuthResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ApiError'
         "409":
           description: Conflict
+          schema:
+            $ref: '#/definitions/dto.ApiError'
+        "422":
+          description: Unprocessable Entity
           schema:
             $ref: '#/definitions/dto.ApiError'
         "500":
