# orchestrator/internal/controllers/auth/login.go
@@ -18,11 +18,16 @@ import (
 // @Failure      400  {object}  dto.ApiError
 // @Failure      401  {object}  dto.ApiError
 // @Failure      404  {object}  dto.ApiError
+// @Failure      422  {object}  dto.ApiError
 // @Failure      500  {object}  dto.ApiError
 // @Router       /login [post]
 func (ctl *Controller) login(ctx fiber.Ctx) error {
 	var body dto.AuthRequest
 	if err := ctx.Bind().JSON(&body); err != nil {
+		return utils.SendError(ctx, dto.InvalidData, fiber.StatusUnprocessableEntity)
+	}
+
+	if len(body.Login) < 1 || len(body.Password) < 1 {
 		return utils.SendError(ctx, dto.InvalidData, fiber.StatusBadRequest)
 	}
 
