# orchestrator/internal/controllers/auth/register.go
@@ -17,13 +17,19 @@ import (
 // @Produce      json
 // @Param        body body  dto.AuthRequest true  "Данные для регистрации"
 // @Success      201  {object}  dto.AuthResponse
+// @Failure      400  {object}  dto.ApiError
 // @Failure      409  {object}  dto.ApiError
+// @Failure      422  {object}  dto.ApiError
 // @Failure      500  {object}  dto.ApiError
 // @Router       /register [post]
 func (ctl *Controller) register(ctx fiber.Ctx) error {
 	var body dto.AuthRequest
 	if err := ctx.Bind().JSON(&body); err != nil {
-		return utils.SendError(ctx, dto.InvalidData, fiber.StatusInternalServerError)
+		return utils.SendError(ctx, dto.InvalidData, fiber.StatusUnprocessableEntity)
+	}
+
+	if len(body.Login) < 1 || len(body.Password) < 1 {
+		return utils.SendError(ctx, dto.InvalidData, fiber.StatusBadRequest)
 	}
 
 	_, err := ctl.usersRepo.GetByName(ctx.Context(), body.Login)
